# BlueArchiveAPIWrapper

./: .gitignore  README.md  pyproject.toml
buruaka/: __init__.py  api.py  query.py  types.py
buruaka/models/: abc.py  base.py  enums.py  student.py
